# Learn-Modern-Advanced-Cpp

./: CMakeLists.txt
local_variables/: value.cc
